--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,14 @@
 {
     box-shadow: 3px 3px 10px var(--gray-100);
 }
+
+#nav .logo:hover
+{
+    /* transform: scaleX(-1); */
+    transform: rotateX(360deg);
+    transition: 2s;
+}
+
 .navbar 
 {
     padding: 20px 0;
